--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.13.8",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
