--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@tanstack/react-query": "^5.36.2",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
